--- a/onepieceStore.html
+++ b/onepieceStore.html
@@ -121,8 +121,8 @@
   <header id="header" class="site-header text-black">
     <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" class="logo" style="width: 25%">
+        <a class="navbar-brand" href="onepieceStore.html">
+          <img src="images/logo.png" class="logo" style="width: 30%">
         </a>
         <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -132,7 +132,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
           <div class="offcanvas-header px-4 pb-0">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="onepieceStore.html">
               <img src="images/main-logo.png" class="logo">
             </a>
             <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close"
@@ -145,45 +145,27 @@
                   data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
                 <ul class="dropdown-menu list-unstyled" aria-labelledby="dropdownPages">
                   <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Homepage 1</a>
+                    <a href="onepieceStore.html" class="dropdown-item item-anchor">Homepage 1</a>
                   </li>
                   <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Homepage V2 <span
+                    <a href="onepieceStore.html" class="dropdown-item item-anchor">Homepage V2 <span
                         class="badge bg-secondary text-dark ms-2">PRO</span></a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link me-4" href="#about-us">About Us</a>
+                <a class="nav-link me-4" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown me-4">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownPages" data-bs-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">Shop</a>
                 <ul class="dropdown-menu list-unstyled" aria-labelledby="dropdownPages">
                   <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Shop Sidebar <span
+                    <a href="onepieceStore.html" class="dropdown-item item-anchor">Shop Sidebar <span
                         class="badge bg-secondary text-dark ms-2">PRO</span></a>
                   </li>
                   <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Shop Grid <span
-                        class="badge bg-secondary text-dark ms-2">PRO</span></a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown me-4">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownPages" data-bs-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">Blog</a>
-                <ul class="dropdown-menu list-unstyled" aria-labelledby="dropdownPages">
-                  <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Blog Classic <span
-                        class="badge bg-secondary text-dark ms-2">PRO</span></a>
-                  </li>
-                  <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Blog 4 Column <span
-                        class="badge bg-secondary text-dark ms-2">PRO</span></a>
-                  </li>
-                  <li>
-                    <a href="index.html" class="dropdown-item item-anchor">Blog With Sidebar <span
+                    <a href="onepieceStore.html" class="dropdown-item item-anchor">Shop Grid <span
                         class="badge bg-secondary text-dark ms-2">PRO</span></a>
                   </li>
                 </ul>
@@ -206,7 +188,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="index.html">
+                      <a href="onepieceStore.html">
                         <svg class="cart" width="18" height="18">
                           <use xlink:href="#cart"></use>
                         </svg>
@@ -235,13 +217,13 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner text-center">
       <div class="carousel-item active">
-        <img src="images/banner1.jpg" alt="Los Angeles" class="d-block mx-auto">
+        <img src="images/banner1.jpg" class="d-block mx-auto">
       </div>
       <div class="carousel-item">
-        <img src="images/banner2.jpg" alt="Chicago" class="d-block mx-auto">
+        <img src="images/banner2.jpg" class="d-block mx-auto">
       </div>
       <div class="carousel-item">
-        <img src="images/banner3.jpg" alt="New York" class="d-block mx-auto">
+        <img src="images/banner3.jpg" class="d-block mx-auto">
       </div>
     </div>
 
@@ -314,7 +296,7 @@
       <div class="row">
         <div class="display-header pb-3 d-flex justify-content-between flex-wrap col-md-12">
           <h2 class="display-2 text-dark text-uppercase">Our Products</h2>
-          <a href="index.html" class="btn btn-medium btn-arrow btn-normal position-relative">
+          <a href="onepieceStore.html" class="btn btn-medium btn-arrow btn-normal position-relative">
             <span class="text-uppercase">Shop All</span>
             <svg class="arrow-right position-absolute" width="18" height="20">
               <use xlink:href="#arrow-right"></use>
@@ -333,7 +315,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình Figure One Piece Luffy Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình Figure One Piece Luffy Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -355,7 +337,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình Figure One piece Boa Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình Figure One piece Boa Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -379,7 +361,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình Figure One Piece Usopp Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình Figure One Piece Usopp Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -403,7 +385,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình Tứ hoàng Yonko Shanks Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình Tứ hoàng Yonko Shanks Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -427,7 +409,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình One Piece PT Chopper Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình One Piece PT Chopper Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -436,7 +418,7 @@
                       tinh xảo.
                     <p>
                     <div class="cart-info">
-                      <a class="pseudo-text-effect" href="#" data-after="">
+                      <a class="pseudo-text-effect" href="#" data-after="Đặt hàng">
                         <span>$170</span>
                       </a>
                       <a href="#" class="btn btn-primary" id="btn-2" onclick="addToCart()">Mua</a>
@@ -451,7 +433,7 @@
                   </div>
                   <div class="cart-concern">
                     <h3 class="card-title text-uppercase pt-3 text-primary">
-                      <a href="index.html" class="text-primary">Mô hình Figure One Piece Ace Resin</a>
+                      <a href="onepieceStore.html" class="text-primary">Mô hình Figure One Piece Ace Resin</a>
                     </h3>
                     <h4>Mô tả:</h4>
                     <p>
@@ -589,14 +571,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-lg-3 col-sm-6">
-            <div class="footer-menu contact-item">
-              <h5 class="widget-title text-uppercase pb-2">Contact Us</h5>
-              <p><a href="">123.456.789</a></p>
-              <p><a href="mailto:">hello@gmail.com</a></p>
-              <p>Nothing</p>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
